[package]
name = "clbservice"
version = "0.1.0"
edition = "2021"
description = "AuditChain Exam Log — Soroban contract that anchors RespondIT BlockedEvents SHA-256 hashes on-chain for tamper-proof academic integrity evidence."
license = "MIT"

[lib]
# cdylib  → Wasm binary deployed on Stellar
# rlib    → Rust library linkage used by the test harness
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }

[dev-dependencies]
# testutils enables Env::default(), mock_all_auths(), and Address::generate()
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

# Wasm-optimised release profile — required for soroban contract build
[profile.release]
opt-level = "z"          # Minimise binary size
overflow-checks = true   # Arithmetic safety in production
debug = false
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"          # No unwinding in Wasm — reduces binary size

# Dev profile keeps debug symbols for soroban-cli local testing
[profile.release-with-logs]
inherits = "release"
debug = true
strip = "none"